Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanNumber.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        number var = 5.0
        return var
    end
end